# EDURAG

./: .env.example  .gitignore  ARCHITECTURE.md  DATABASE_SETUP.md  DOCKER_SETUP.md  PHASE_A_FIX_SUMMARY.md  QUICKSTART.md  bug_request.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.v2.yml  docker-compose.yml  exam_layout.html  final_frontend_test.js  import_excel_data.py  test_full_system.py  test_subject_conversion.py  verify_fix.py
backend/: .env.example  add_question_type_to_template.py  alembic.ini  cleanup_and_insert.py  example_usage.py  insert_test_templates.py  pyproject.toml  quick_test.py  requirements.txt  test_claude_integration.py  test_templates_english.sql
backend/alembic/: env.py
backend/alembic/versions/: 001_add_image_questions.py  002_subject_grade_decouple.py
backend/app/: main.py
backend/app/core/: config.py  embeddings.py  llm_client.py
backend/app/db/: database.py  models.py
backend/app/prompts/: matching.txt  true_false.txt
backend/app/routers/: dashboard.py  documents.py  generate.py  health.py  image_questions.py  images.py  ingest.py  mock_dashboard.py  mock_generate.py  mock_ingest.py  mock_questions.py  mock_templates.py  questions.py  subjects.py  templates.py  upload.py
backend/app/schemas/: document.py  image_question.py  ingest.py  question.py  subject.py  template.py
backend/app/services/: __init__.py  dashboard_service.py  (+10 more)
backend/db/: README.md  init.sql  init_complete.sql  init_from_current_db.sql
backend/tests/: test_health.py  test_mock_apis.py  test_templates.py
(+96 files in other folders)
